--- a/network-viz/src/index.css
+++ b/network-viz/src/index.css
@@ -24,10 +24,16 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
+html {
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1 {
